--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "cross-env NODE_ENV=development node app.js",
-    "start:prod": "npm run build && cross-env NODE_ENV=production node app.js",
+    "start:prod": "npm run build && cross-env NODE_ENV=production && node app.js",
     "build": "webpack --config webpack.prod.js"
   },
   "author": "Vlad Eliseev <freshymanchan@gmail.com>",
